objects/Sales_Area_Product_Info__c.object
<CustomObject>
    <description>Keeps track of Product information at Sales Org level</description>
    <fields>
        <fullName>Category__c</fullName>
        <description>Represents the format or type of content in the material. (Digest, Textbook, etc.)</description>
        <inlineHelpText>Represents the format or type of content in the material. (Digest, Textbook, etc.)</inlineHelpText>
        <label>Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_Chain_Material_Status_Valid_From__c</fullName>
        <description>SAP D-Chain Material Status is valid from this date</description>
        <label>D-Chain Material Status Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>D_Chain_Material_Status__c</fullName>
        <description>SAP D-Chain Material Status</description>
        <label>D-Chain Material Status</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Material_Number__c</fullName>
        <description>This is used to store material number similar to productcode in SAP</description>
        <label>Material Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_High_Level__c</fullName>
        <description>Represents the media of the material (Online, Print, CD, etc.).</description>
        <inlineHelpText>Represents the media of the material (Online, Print, CD, etc.).</inlineHelpText>
        <label>Media High Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Lower_Level__c</fullName>
        <description>Represents a more detailed media of the individual material (Bound Volume, Pamphlet, etc.).</description>
        <inlineHelpText>Represents a more detailed media of the individual material (Bound Volume, Pamphlet, etc.).</inlineHelpText>
        <label>Media Lower Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sales Area Product Infos</relationshipLabel>
        <relationshipName>Sales_Area_Product_Infos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAPExtId__c</fullName>
        <externalId>true</externalId>
        <label>SAPExtId</label>
        <length>26</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <description>Holds Sales Org for Sales Area Product Info</description>
        <label>Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BKRS</fullName>
                </value>
                <value>
                    <fullName>CHWL</fullName>
                </value>
                <value>
                    <fullName>LLEY</fullName>
                </value>
                <value>
                    <fullName>LLPA</fullName>
                </value>
                <value>
                    <fullName>LRA</fullName>
                </value>
                <value>
                    <fullName>SMG</fullName>
                </value>
                <value>
                    <fullName>SMGE</fullName>
                </value>
                <value>
                    <fullName>SMHK</fullName>
                </value>
                <value>
                    <fullName>SMMY</fullName>
                </value>
                <value>
                    <fullName>SMSG</fullName>
                </value>
                <value>
                    <fullName>WEST</fullName>
                </value>
                <value>
                    <fullName>West Group:WEST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <description>Represents the primary topic covered in the material. (Litigation, Family Law, etc.)</description>
        <inlineHelpText>Represents the primary topic covered in the material. (Litigation, Family Law, etc.)</inlineHelpText>
        <label>Topic</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Sales Area Product Info</label>
    <nameField>
        <label>Sales Area Product Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Area Product Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Product_Null_Check</fullName>
        <active>true</active>
        <description>The validation rule does not allow product to be blank for the Sales Area Product Info object</description>
        <errorConditionFormula>ISBLANK( Product__c )</errorConditionFormula>
        <errorMessage>Product cannot be blank for the Sales Area Product Info</errorMessage>
    </validationRules>
</CustomObject>